# exam

./: .gitignore  AGENTS.md  BUILD_REPORT.md  LICENSE  README.md  README_AR.md  README_EN.md  TEST_REPORT.md  VERSION.txt  pyproject.toml
config/: app.yml  grading.yml  norm.yml  piscine_timeline.yml
docs/: AI_AGENT_BRIEF_AR.md  ARCHITECTURE_AR.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_ROADMAP_AR.md  LEGACY_TOOL_ANALYSIS.md  LEGACY_TOOL_ANALYSIS_TEMPLATE.md  NORMINETTE_POLICY_AR.md  PISCINE27_AR.md  PISCINE_PEDAGOGY_AR.md  PROJECT_TESTING_POLICY.md  STUDENT_USAGE.md  UI_POLICY_AR.md
legacy_archives/: PUT_OLD_ARCHIVES_HERE.txt
piscine_forge/: cli.py  compare.py  correction_source.py  correction_ux.py  curriculum.py  doctor.py  exam_ui.py  failure_labels.py  forbidden.py  interface.py  loader.py  moulinette_summary.py  norminette.py  picker.py  progress.py  projects.py  reset.py  session.py  theme.py  trace.py  ui.py  vogsphere.py
prompts/: 00_MASTER_PROMPT_AR.md  01_RELOCATE_AND_REBUILD_PROJECT_AR.md  02_LEGACY_ARCHIVES_ANALYSIS_AR.md  03_SUBJECT_BANK_IMPORT_AR.md  04_MOULINETTE_ENGINE_AR.md  05_NORMINETTE_AR.md  06_SHELL_ENGINE_AR.md  07_FRIDAY_EXAMS_AR.md  08_PISCINE27_AR.md  09_TERMINAL_UI_AR.md  10_ACCEPTANCE_TESTS_AR.md
schemas/: correction.schema.yml  pool.schema.yml  subject.schema.yml  trace.schema.yml
tests/: test_acceptance.py  test_bsq.py  test_correction_ux.py  test_current_reset_history_workspace.py  test_curriculum_structure.py  test_exam_terminal.py  test_forbidden.py  test_generators.py  test_loader.py  test_moulinette_foundation.py  (+6 more)
(+1320 files in other folders)
